所有頁面開版

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -224,8 +224,9 @@
               精彩預告
             </h2>
 
-            <div class="row g-4 video-list">
-              <!-- 影片 1 -->
+            <div class="text-white fs-2 text-center">網站建置中</div>
+
+            <!-- <div class="row g-4 video-list">
               <div class="col-12 col-md-4">
                 <figure class="video-card m-0">
                   <div class="ratio ratio-16x9">
@@ -241,7 +242,6 @@
                 </figure>
               </div>
 
-              <!-- 影片 2 -->
               <div class="col-12 col-md-4">
                 <figure class="video-card m-0">
                   <div class="ratio ratio-16x9">
@@ -257,7 +257,6 @@
                 </figure>
               </div>
 
-              <!-- 影片 3 -->
               <div class="col-12 col-md-4">
                 <figure class="video-card m-0">
                   <div class="ratio ratio-16x9">
@@ -272,7 +271,7 @@
                   <figcaption class="visually-hidden">精彩預告 3：活動亮點彙整</figcaption>
                 </figure>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
@@ -286,8 +285,8 @@
             最新消息
             </h2>
 
-            <!-- 項目 1 -->
-            <a class="news-link" href="news-detail.html">
+            <div class="text-white fs-2 text-center">網站建置中</div>
+            <!-- <a class="news-link" href="news-detail.html">
               <div class="row align-items-center g-0">
                 <div class="col-8 col-md-auto mb-2 mb-md-0">
                   <span class="news-date">2023 年 10 月 27 日</span>
@@ -301,7 +300,6 @@
               </div>
             </a>
 
-            <!-- 項目 2 -->
             <a class="news-link" href="news-detail.html">
               <div class="row align-items-center g-0">
                 <div class="col-8 col-md-auto mb-2 mb-md-0">
@@ -316,7 +314,6 @@
               </div>
             </a>
 
-            <!-- 項目 3 -->
             <a class="news-link" href="news-detail.html">
               <div class="row align-items-center g-0">
                 <div class="col-8 col-md-auto mb-2 mb-md-0">
@@ -331,7 +328,6 @@
               </div>
             </a>
 
-            <!-- 項目 4 -->
             <a class="news-link" href="news-detail.html">
               <div class="row align-items-center g-0">
                 <div class="col-8 col-md-auto mb-2 mb-md-0">
@@ -346,7 +342,6 @@
               </div>
             </a>
 
-            <!-- 項目 5 -->
             <a class="news-link" href="news-detail.html">
               <div class="row align-items-center g-0">
                 <div class="col-8 col-md-auto mb-2 mb-md-0">
@@ -361,7 +356,6 @@
               </div>
             </a>
 
-            <!-- 項目 6 -->
             <a class="news-link" href="news-detail.html">
               <div class="row align-items-center g-0">
                 <div class="col-8 col-md-auto mb-2 mb-md-0">
@@ -376,7 +370,6 @@
               </div>
             </a>
 
-            <!-- 項目 7 -->
             <a class="news-link" href="news-detail.html">
               <div class="row align-items-center g-0">
                 <div class="col-8 col-md-auto mb-2 mb-md-0">
@@ -391,7 +384,6 @@
               </div>
             </a>
 
-            <!-- 項目 8 -->
             <a class="news-link" href="news-detail.html">
               <div class="row align-items-center g-0">
                 <div class="col-8 col-md-auto mb-2 mb-md-0">
@@ -406,7 +398,6 @@
               </div>
             </a>
 
-            <!-- 項目 9 -->
             <a class="news-link" href="news-detail.html">
               <div class="row align-items-center g-0">
                 <div class="col-8 col-md-auto mb-2 mb-md-0">
@@ -419,7 +410,7 @@
                   <span class="news-title">桃知道廣場萬聖出擊，10/21－10/22 活動送好禮！</span>
                 </div>
               </div>
-            </a>
+            </a> -->
 
           </div>
         </div>
