--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -184,7 +184,7 @@
               </li>
 
               <li role="none">
-                <a role="menuitem" class="modal-link" href="ttransport-info.html">
+                <a role="menuitem" class="modal-link" href="transport-info.html">
                   <img class="pumpkin" src="images/pumpkin.webp" alt="交通資訊" aria-hidden="true">交通資訊
                 </a>
               </li>
