--- a/src/html/index.html
+++ b/src/html/index.html
@@ -285,132 +285,22 @@
             最新消息
             </h2>
 
-            <div class="text-white fs-2 text-center">網站建置中</div>
-            <!-- <a class="news-link" href="news-detail.html">
+           
+            <a class="news-link" href="news-detail01.html">
               <div class="row align-items-center g-0">
                 <div class="col-8 col-md-auto mb-2 mb-md-0">
-                  <span class="news-date">2023 年 10 月 27 日</span>
+                  <span class="news-date">2025年09月15日</span>
                 </div>
                 <div class="col-4 col-md-auto d-flex justify-content-md-end">
                   <img class="news-hand" src="images/hand.webp" alt="" aria-hidden="true">
                 </div>
                 <div class="col-12 col-md">
-                  <span class="news-title">可以吃的萬聖節！桃園萬聖城 開箱魔幻廚房特殊料理</span>
+                  <span class="news-title">「2025桃園萬聖城」即將登場！帶你踏上尋寶之旅</span>
                 </div>
               </div>
             </a>
 
-            <a class="news-link" href="news-detail.html">
-              <div class="row align-items-center g-0">
-                <div class="col-8 col-md-auto mb-2 mb-md-0">
-                  <span class="news-date">2023 年 10 月 24 日</span>
-                </div>
-                <div class="col-4 col-md-auto d-flex justify-content-md-end">
-                  <img class="news-hand" src="images/hand.webp" alt="" aria-hidden="true">
-                </div>
-                <div class="col-12 col-md">
-                  <span class="news-title">桃園萬聖城假日免費接駁服務 搭乘就送限量萬聖小禮物！</span>
-                </div>
-              </div>
-            </a>
-
-            <a class="news-link" href="news-detail.html">
-              <div class="row align-items-center g-0">
-                <div class="col-8 col-md-auto mb-2 mb-md-0">
-                  <span class="news-date">2023 年 10 月 19 日</span>
-                </div>
-                <div class="col-4 col-md-auto d-flex justify-content-md-end">
-                  <img class="news-hand" src="images/hand.webp" alt="" aria-hidden="true">
-                </div>
-                <div class="col-12 col-md">
-                  <span class="news-title">桃知道廣場萬聖出擊，10/21－10/22 活動送好禮！</span>
-                </div>
-              </div>
-            </a>
-
-            <a class="news-link" href="news-detail.html">
-              <div class="row align-items-center g-0">
-                <div class="col-8 col-md-auto mb-2 mb-md-0">
-                  <span class="news-date">2023 年 10 月 24 日</span>
-                </div>
-                <div class="col-4 col-md-auto d-flex justify-content-md-end">
-                  <img class="news-hand" src="images/hand.webp" alt="" aria-hidden="true">
-                </div>
-                <div class="col-12 col-md">
-                  <span class="news-title">桃園萬聖城假日免費接駁服務 搭乘就送限量萬聖小禮物！</span>
-                </div>
-              </div>
-            </a>
-
-            <a class="news-link" href="news-detail.html">
-              <div class="row align-items-center g-0">
-                <div class="col-8 col-md-auto mb-2 mb-md-0">
-                  <span class="news-date">2023 年 10 月 19 日</span>
-                </div>
-                <div class="col-4 col-md-auto d-flex justify-content-md-end">
-                  <img class="news-hand" src="images/hand.webp" alt="" aria-hidden="true">
-                </div>
-                <div class="col-12 col-md">
-                  <span class="news-title">桃知道廣場萬聖出擊，10/21－10/22 活動送好禮！</span>
-                </div>
-              </div>
-            </a>
-
-            <a class="news-link" href="news-detail.html">
-              <div class="row align-items-center g-0">
-                <div class="col-8 col-md-auto mb-2 mb-md-0">
-                  <span class="news-date">2023 年 10 月 24 日</span>
-                </div>
-                <div class="col-4 col-md-auto d-flex justify-content-md-end">
-                  <img class="news-hand" src="images/hand.webp" alt="" aria-hidden="true">
-                </div>
-                <div class="col-12 col-md">
-                  <span class="news-title">桃園萬聖城假日免費接駁服務 搭乘就送限量萬聖小禮物！</span>
-                </div>
-              </div>
-            </a>
-
-            <a class="news-link" href="news-detail.html">
-              <div class="row align-items-center g-0">
-                <div class="col-8 col-md-auto mb-2 mb-md-0">
-                  <span class="news-date">2023 年 10 月 19 日</span>
-                </div>
-                <div class="col-4 col-md-auto d-flex justify-content-md-end">
-                  <img class="news-hand" src="images/hand.webp" alt="" aria-hidden="true">
-                </div>
-                <div class="col-12 col-md">
-                  <span class="news-title">桃知道廣場萬聖出擊，10/21－10/22 活動送好禮！</span>
-                </div>
-              </div>
-            </a>
-
-            <a class="news-link" href="news-detail.html">
-              <div class="row align-items-center g-0">
-                <div class="col-8 col-md-auto mb-2 mb-md-0">
-                  <span class="news-date">2023 年 10 月 24 日</span>
-                </div>
-                <div class="col-4 col-md-auto d-flex justify-content-md-end">
-                  <img class="news-hand" src="images/hand.webp" alt="" aria-hidden="true">
-                </div>
-                <div class="col-12 col-md">
-                  <span class="news-title">桃園萬聖城假日免費接駁服務 搭乘就送限量萬聖小禮物！</span>
-                </div>
-              </div>
-            </a>
-
-            <a class="news-link" href="news-detail.html">
-              <div class="row align-items-center g-0">
-                <div class="col-8 col-md-auto mb-2 mb-md-0">
-                  <span class="news-date">2023 年 10 月 19 日</span>
-                </div>
-                <div class="col-4 col-md-auto d-flex justify-content-md-end">
-                  <img class="news-hand" src="images/hand.webp" alt="" aria-hidden="true">
-                </div>
-                <div class="col-12 col-md">
-                  <span class="news-title">桃知道廣場萬聖出擊，10/21－10/22 活動送好禮！</span>
-                </div>
-              </div>
-            </a> -->
+            
 
           </div>
         </div>
